MNK-572: Increase permanent generation size when using glassfish app server (for ContainerHibernate325Test, ContinuationsTest)
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@8830 7fc7bbf3-cf45-46d4-be06-341739edd864